src/test/deca/context/invalid/sansobjet/identifier_does_not_exist.deca
// Definition in env_exp does not exist with the name : y
// Description : Affectation d'une variable avec un identifiant n'existant pas dans l'environnement
// Resultat : Erreur ligne 6 : y n'existe dans l'environnement

{
    int x;
    y = 4;
}